# CompProg

./: .gitignore  CMakeLists.txt  README.md  a.out  lift.cpp  newfile.R
in_process/: a.out  crackingthesafe.cpp  cubing.cpp  sss.cpp
in_process/SecretSanta/: secretSanta.cpp
in_process/aceArbiter/: aceArbiter.cpp
in_process/badHombres/: #badHombres.cpp#~  badHombres.cpp
in_process/badwiring/: a.out  wiring.cpp
in_process/balloonDarts/: main.cpp
in_process/battleSimulation/: battleSimulation.cpp
in_process/bowl_stacking/: bowl.cpp
in_process/colorseq/: colorSeq.cpp
in_process/cookieSelection/: cookieSelection.cpp
in_process/digitSum/: digitSum.cpp  slowDigitSum.cpp
in_process/divisibleSubsequences/: divSubsequences.cpp
in_process/doubloonGame/: doubloonGame.cpp
in_process/exponial/: exponial.cpp  test.cpp
in_process/extremeShopping/: a.out  exShop.cpp  extremeShopping.cpp
in_process/fare_dodging/: fare_dodging.cpp  fare_dodging_old.cpp
in_process/feedingSeals/: feedingSeals.cpp
in_process/floorPlan/: floorPlan.cpp
in_process/flyingSafely/: flyingSafely.cpp
in_process/frogBehaviour/: main.cpp
in_process/highestHill/: main.cpp
in_process/horrorList/: horrorList.cpp
in_process/iWorkAllDay/: iWorkAllDay.cpp
in_process/labyrinth/: a.out  labyrinth.cpp  old_bad_labyrinth.cpp
in_process/lift/: lift.cpp
in_process/luckyLight/: luckyLight.cpp
in_process/olderBrother/: olderBrother.cpp
in_process/sellingCPUs/: sellingCPUs.cpp
in_process/stockMarket/: stockMarket.cpp
in_process/template/: main.cpp  template.cpp
in_process/wrongAnswer/: wrongAnswer.cpp
meh/EasterEggs/: easterEggs.cpp
meh/bowl_stacking/: bowl.cpp
meh/crackingthesage/: crackingthesafe.cpp  oldcrackingthesafe.cpp
meh/cubing/: oldcubing.cpp
solved/: mosquitos.cpp  rollingdice.cpp  venusrover.cpp
solved/SecretSanta/: secretSanta.cpp
solved/aPrizeNoOneCanWin/: main.cpp
solved/amsterdamDistance/: amsterdamDist.cpp
solved/badScientist/: badscientist.cpp
solved/badwiring/: a.out  wiring.cpp
solved/ballParkEstimate/: ballPartEstimate.cpp
solved/battleSimulation/: battleSim.cpp  (+1 more)
(+42 files in other folders)
